header profile font invisible bugfix

--- a/ems.client/src/index.css
+++ b/ems.client/src/index.css
@@ -497,7 +497,7 @@ main {
 }
 
 .profile-menu .MuiMenuItem-root .MuiButton-root {
-  color: #616161;
+  color: #616161 !important;
   font-weight: 400;
   text-transform: capitalize;
   line-height: 20px;
